cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_398.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/digest.c:577: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/digest.c:577:5: Write of unused value
575.   int EVP_MD_CTX_ctrl(EVP_MD_CTX *ctx, int cmd, int p1, void *p2)
576.   {
577.       int ret = EVP_CTRL_RET_UNSUPPORTED;
           ^
578.       int set_params = 1;
579.       size_t sz;
